compiler/testData/diagnostics/tests/duplicateJvmSignature/accidentalOverrides/overridesNothing.fir.kt
interface B {
    fun getX() = 1
}

class C : B {
    <!NOTHING_TO_OVERRIDE!>override<!> konst x = 1
}